kubernetes/vault/components/singleton/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault-singleton
  namespace: vault
  labels:
    app: vault
    app.kubernetes.io/instance: vault
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 0
  serviceName: vault
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
      annotations:
        enable.version-checker.io/vault: "true"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: vault-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        # renovate: datasource=docker depName=docker.io/hashicorp/vault
        - image: docker.io/hashicorp/vault:2.1.2@sha256:c2f666266f383d2cf424d86b8bb8ce7d065562173ffec2b476d762943608bb55
          imagePullPolicy: IfNotPresent
          name: vault
          readinessProbe:
            exec:
              command: ["/bin/sh", "-ec", "vault status -tls-skip-verify"]
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true
              scheme: HTTPS
              port: vault
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 10
          ports:
            - containerPort: 443
              protocol: TCP
              name: unused-443
            - containerPort: 8200
              protocol: TCP
              name: vault
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # runAsUser: 11000
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
            #   add:
            #     - IPC_LOCK
          command:
            - vault
            - server
            - -config=/vault/config/vault.json
          volumeMounts:
            - mountPath: /vault/file
              name: vault-pvc
            - mountPath: /vault/config
              name: vault-config
            - mountPath: /vault/cert
              name: vault-cert
            - name: gcp-credentials-request
              readOnly: true
              mountPath: /var/run/secrets/google
            - name: serviceaccount-token
              readOnly: true
              mountPath: /var/run/secrets/openshift/serviceaccount
          resources:
            requests:
              memory: "128Mi"
              cpu: "35m"
            limits:
              memory: "768Mi"
              cpu: "150m"
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
      hostname: vault
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      volumes:
        - name: vault-config
          configMap:
            name: vault-config-singleton
        - name: vault-cert
          secret:
            secretName: vault-okd-cert
        - name: vault-pvc
          persistentVolumeClaim:
            claimName: vault
        - name: gcp-credentials-request
          configMap:
            name: gcp-credentials-request
            defaultMode: 420
        - name: serviceaccount-token
          projected:
            sources:
              - serviceAccountToken:
                  audience: openshift
                  expirationSeconds: 3600
                  path: token
            defaultMode: 420
      enableServiceLinks: false
