kubernetes/vault/components/singleton/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault-singleton
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: vault
      protocol: TCP
      port: 443
      targetPort: vault
  selector:
    app: vault
